# vigil

./: .gitignore  CLAUDE.md  INTEGRATION_TRAFFICTRACER.md  MVP_COMPLETE.md  Makefile  README.md  SECURITY_CHECKLIST.md  SECURITY_TEST_REPORT.md  STATUS.md  TESTING_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
agent/: Dockerfile  __init__.py  config.py  health.py  main.py
agent/collectors/: __init__.py  cpu.py  disk.py  memory.py  network.py  process.py  uptime.py
agent/transport/: __init__.py  http_sender.py
collector/: Dockerfile  __init__.py  config.py  logging_config.py  main.py  requirements.txt
collector/api/: __init__.py  agents.py  events.py  health.py  internal_metrics.py  metrics.py
collector/auth/: __init__.py  api_keys.py
collector/middleware/: metrics_tracker.py  rate_limit.py
collector/models/: __init__.py  agent_model.py  database.py  event_model.py  metric_model.py
config/: agent.yaml
examples/: README.md  basic_example.py  prototype_app.py  prototype_config.yaml
schema/: audit_event.schema.json  metric_event.schema.json
sdks/go/: go.mod
sdks/go/audit/: client.go  event.go  validate.go  validate_test.go
sdks/python/: pyproject.toml
sdks/python/audit_sdk/: __init__.py  client.py
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/src/__tests__/: client.test.ts
specs/: debt-review-post-sprint4.md
specs/agent/: agent-integration-test.md  debt-td-04-retry-backoff.md  debt-td-05-disk-path.md  debt-td-06-config-validation.md  health-endpoint.md
specs/collector/: cors-config.md  debt-td-01-use-audit-engine.md  debt-td-02-rate-limiting.md  debt-td-03-auth-bypass.md  debt-td-08-09-cleanup.md  internal-metrics.md  structured-logging.md
specs/core/: debt-td-07-timezone-aware.md  debt-td-10-filters.md  debt-td-15-api-key-regex.md  expand-config-tests.md
specs/docker/: e2e-compose-test.md
specs/schema/: schema-validation.md
specs/sdk-go/: go-validation.md
specs/sdk-python/: sdk-python-edge-cases.md  sdk-python-tests.md
specs/sdk-ts/: ts-tests.md
specs/storage/: debt-td-14-shared-schema.md
tauri_audit_gui/: README.md  app.js  index.html  sample_logs.jsonl  styles.css
tauri_audit_gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri_audit_gui/src-tauri/capabilities/: default.json
tauri_audit_gui/src-tauri/src/: main.rs
tests/: README.md  __init__.py  conftest.py
tests/contract/: test_schema_validation.py
tests/e2e/: test_full_stack.sh
tests/integration/: test_agent_to_collector.py  test_collector_api.py
tests/unit/: __init__.py  test_agent_collectors.py  test_agent_config.py  test_agent_health.py  test_agent_main.py  test_audit_context.py  test_collector_logging.py  test_config.py  test_decorators.py  test_engine.py  test_enums.py  test_event.py  test_file_storage.py  test_http_sender.py  test_metric_model.py  test_package_init.py  test_python_sdk.py  test_sanitizers.py  test_security_validation.py  test_shared_schema.py  test_sql_storage.py
vigil/: __init__.py
vigil/core/: __init__.py  context.py  decorators.py  engine.py  enums.py  event.py  exceptions.py
vigil/processing/: __init__.py  sanitizers.py
vigil/storage/: __init__.py  base.py  file_storage.py  metric_model.py  sql_storage.py  table_defs.py
vigil/utils/: __init__.py  config.py
