[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-sdk"
version = "1.0.0"
description = "Python SDK for the Vigil collector service"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
framework = [
    "vigil>=1.0.0",
]
