[package]
name = "audit_gui"
version = "0.1.0"
description = "Audit Explorer GUI"
authors = ["Vigil"]
edition = "2021"

[dependencies]
tauri = { version = "2.10.0" }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.9.0"
chrono = "0.4.42"

[build-dependencies]
tauri-build = "2.5.5"
